创建第三个测试用例，实现通过构造函数的形式来进行依赖注入，即：构造函数注入

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /SpringDemo_first/build/
 /SpringDemo_second/nbproject/private/
 /SpringDemo_second/build/
+/SpringDemo_ICDH/nbproject/private/
+/SpringDemo_ICDH/build/
