新建有关spring中beans.xml配置文件中属性ref的应用用例，其中利用了接口的概念到最后的实现

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /SpringDemo_second/build/
 /SpringDemo_ICDH/nbproject/private/
 /SpringDemo_ICDH/build/
+/Spring_MVC_ref/nbproject/private/
+/Spring_MVC_ref/build/
