--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /SpringDemo_ICDH/build/
 /Spring_MVC_ref/nbproject/private/
 /Spring_MVC_ref/build/
+/ProjectAutoDemo/nbproject/private/
+/ProjectAutoDemo/build/
