添加SimpleURLHandlerMapping的使用样例，共有两种获取数值的方式，一种为转发获取，另一种为重定向来进行数值的获取

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 /Spring_MVC_ref/build/
 /ProjectAutoDemo/nbproject/private/
 /ProjectAutoDemo/build/
+/SimpleURLHandlerMappingDemo/nbproject/private/
+/SimpleURLHandlerMappingDemo/build/
