添加使用ControllerClassNameHandlerMapping进行传递的使用方法的例子

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@
 /ProjectAutoDemo/build/
 /SimpleURLHandlerMappingDemo/nbproject/private/
 /SimpleURLHandlerMappingDemo/build/
+/ControllerClassNameHandlerMappingDemo/nbproject/private/
+/ControllerClassNameHandlerMappingDemo/build/
+/BeanNameUrlHandlerMappingDemo/nbproject/private/
