添加使用BeanNameUrlHandlerMapping进行传递的信息的例子

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@
 /ControllerClassNameHandlerMappingDemo/nbproject/private/
 /ControllerClassNameHandlerMappingDemo/build/
 /BeanNameUrlHandlerMappingDemo/nbproject/private/
+/BeanNameUrlHandlerMappingDemo/build/
