添加使用创建配置控制器，实现@Controller 与 @RequestMapping("/user")进行控制器与访问之间映射的例子

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@
 /ControllerClassNameHandlerMappingDemo/build/
 /BeanNameUrlHandlerMappingDemo/nbproject/private/
 /BeanNameUrlHandlerMappingDemo/build/
+/SpringMadeMVC/nbproject/private/
+/SpringMadeMVC/build/
