添加实现静态代理的工程

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@
 /BeanNameUrlHandlerMappingDemo/build/
 /SpringMadeMVC/nbproject/private/
 /SpringMadeMVC/build/
+/Static_procy/nbproject/private/
+/Static_procy/build/
