更正命名的错误

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@
 /Static_procy/build/
 /Dynamic_Proxy_project/nbproject/private/
 /Dynamic_Proxy_project/build/
+/Spring_AOP_Project/nbproject/private/
+/Static_proxy/build/
+/Static_proxy/nbproject/private/
