--- a/Static_proxy/nbproject/project.properties
+++ b/Static_proxy/nbproject/project.properties
@@ -53,7 +53,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=static_procy.Static_procy
+main.class=static_proxy.Static_proxy
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
