添加Sring中的AOP用例，介绍了一共五个通知的设置及其在beans.xml中的配置，同时添加日志文件，用于记录运行时的状况

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@
 /Static_proxy/build/
 /Static_proxy/nbproject/private/
 /Spring_AOP_Project/build/
+/SpringAopTestSecond/nbproject/private/
+/SpringAopTestSecond/build/
