添加业务分类的jsf例子，其中含有数据库的模拟操作，最后的结果是将数据库中的数据读出并显示到页面中，重点是结构的划分

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@
 /SpringAopTestSecond/nbproject/private/
 /SpringAopTestSecond/build/
 /jsf_annotation_project/build/
+/jsf_database_project/build/
+/jsf_database_project/nbproject/private/
