建立jsf与Spring整合的框架（初期阶段）

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@
 /jsf_annotation_project/build/
 /jsf_database_project/build/
 /jsf_database_project/nbproject/private/
+/JSF_Spring/nbproject/private/
