添加含有spring与hibernate框架结合的例子，实现创建用户表的功能，添加Junit测试用例，并测试成功

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@
 /JSF_Spring/nbproject/private/
 /JSF_Spring/build/
 /HibernateDemo/nbproject/private/
+/HibernateJunitDemo/nbproject/private/
+/HibernateJunitDemo/build/
+/HibernateJuitSpringDemo/nbproject/private/
+/HibernateJuitSpringDemo/build/
