创建一个新的完整的项目，该项目整合了spring、hibernate两个框架，同时增添JUnit测试以及AOP，测试成功通过，实现对数据库数据的插入及查询

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,5 @@
 /HibernateJunitDemo/build/
 /HibernateJuitSpringDemo/nbproject/private/
 /HibernateJuitSpringDemo/build/
+/HibernateJuitSpringDemoNew/nbproject/private/
+/HibernateJuitSpringDemoNew/build/
