创建一个整合spring、jsf以及hibernate框架的项目，显示的结果是创建产品数据库并添加数据，项目的关键在于三个框架整合在一起的配置

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@
 /HibernateJuitSpringDemo/build/
 /HibernateJuitSpringDemoNew/nbproject/private/
 /HibernateJuitSpringDemoNew/build/
+/JSH_Demo/build/
+/JSH_Demo/nbproject/private/
