在之前JSH_Demo项目的基础上使用实体类中添加注解的方式建立数据库表，实现与JSH_Demo项目同样的效果，这里要注意的是每次添加一个实体类需要在applicationContext.xml中进行配置

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,6 @@
 /HibernateJuitSpringDemoNew/build/
 /JSH_Demo/build/
 /JSH_Demo/nbproject/private/
+/WebApplication1/nbproject/private/
+/JSH_Demo_Annotate/nbproject/private/
+/JSH_Demo_Annotate/build/
