添加关于junit的测试项目程序

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@
 /WebApplication1/nbproject/private/
 /JSH_Demo_Annotate/nbproject/private/
 /JSH_Demo_Annotate/build/
+/junitProject/build/
+/junitProject/nbproject/private/
