添加整合spring、jsf以及hibernate三个框架的项目例子，实现插入以及查询的操作，并添加单元测试且测试通过

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@
 /junitProject/build/
 /junitProject/nbproject/private/
 /junitProjectEmail/nbproject/private/
+/Grant_University/build/
+/Grant_University/nbproject/private/
