创建单元测试中有关参数化测试以及测试套件使用项目工程

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,5 @@
 /junitProjectEmail/nbproject/private/
 /Grant_University/build/
 /Grant_University/nbproject/private/
+/JunitDemo/build/
+/JunitDemo/nbproject/private/
