添加字符匹配时的测试项目程序

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,5 @@
 /Grant_University/nbproject/private/
 /JunitDemo/build/
 /JunitDemo/nbproject/private/
+/MatchJunitDemo/nbproject/private/
+/MatchJunitDemo/build/
