--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,5 @@
 /JunitDemo/nbproject/private/
 /MatchJunitDemo/nbproject/private/
 /MatchJunitDemo/build/
+/JSH_Test_Demo/build/
+/JSH_Test_Demo/nbproject/private/
