添加maven测试工程的样例

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,5 @@
 /MatchJunitDemo/build/
 /JSH_Test_Demo/build/
 /JSH_Test_Demo/nbproject/private/
+/mavenprojectMockObject/nbproject/
+/mavenprojectMockObject/target/
